--- a/source/stm32-cube-ide/CMakeLists.txt
+++ b/source/stm32-cube-ide/CMakeLists.txt
@@ -1,12 +1,12 @@
-set(SOURCE_FOLDER_PATH "${CMAKE_SOURCE_DIR}/stm32-cube-ide")
+set(CURRENT_FOLDER_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_definitions(-DSTM32F446xx) 
 
 set(STM32_CUBE_INCLUDE_FILES
-   ${SOURCE_FOLDER_PATH}/Core/Inc/
-   ${SOURCE_FOLDER_PATH}/Drivers/STM32F4xx_HAL_Driver/Inc/
-   ${SOURCE_FOLDER_PATH}/Drivers/CMSIS/Include/
-   ${SOURCE_FOLDER_PATH}/Drivers/CMSIS/Device/ST/STM32F4xx/Include/
+   ${CURRENT_FOLDER_PATH}/Core/Inc/
+   ${CURRENT_FOLDER_PATH}/Drivers/STM32F4xx_HAL_Driver/Inc/
+   ${CURRENT_FOLDER_PATH}/Drivers/CMSIS/Include/
+   ${CURRENT_FOLDER_PATH}/Drivers/CMSIS/Device/ST/STM32F4xx/Include/
 )
 
 set(LIBRARY_SOURCES_FILES
