build: remove .cproject file from .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ local.properties
 *.pydevproject
 
 # CDT-specific (C/C++ Development Tooling)
-.cproject
+#.cproject
 
 # CDT- autotools
 .autotools
