--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -6,7 +6,7 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     container:
-      image: charlesdias/gcc-arm-cmake:latest
+      image: charlesdias/stm32_gtest:latest
 
     steps:
     - uses: actions/checkout@v3
