fix: generate tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,46 +1,66 @@
+include(GoogleTest)
+
 ############################ Test Project ############################
 set(SOURCE_FOLDER_PATH "${CMAKE_SOURCE_DIR}/stm32-cube-ide")
 set(TEST_FOLDER_PATH "${CMAKE_SOURCE_DIR}/tests")
+
+# target_include_directories( ${HELLO_UNIT_TEST} PRIVATE
+#    ${TEST_FOLDER_PATH}/header-overrides
+#    ${TEST_FOLDER_PATH}/mock
+# )
+
+include_directories(
+   ${TEST_FOLDER_PATH}/header-overrides
+   ${TEST_FOLDER_PATH}/mock
+)
 
 set(ASSERT_MOCK AssertMock)
 add_library(${ASSERT_MOCK}
    ${TEST_FOLDER_PATH}/mock/assert_mock.c
 ) 
 
-set(UNIT_TEST UnitTest)
-add_executable( ${UNIT_TEST}
-   ${TEST_FOLDER_PATH}/unit/unit_hello_test.cpp
+######################################################################
+# Hello unit test
+set(HELLO_UNIT_TEST HelloUnitTest)
+add_executable( ${HELLO_UNIT_TEST}
+   ${TEST_FOLDER_PATH}/unit/hello_unit_test.cpp
+)
+
+target_link_libraries( ${HELLO_UNIT_TEST} PUBLIC
+   GTest::gmock_main
+)
+gtest_discover_tests( ${HELLO_UNIT_TEST}
+)
+
+######################################################################
+# Hello integration test
+set(HELLO_INTEGRATION_TEST HelloIntegrationTest)
+add_executable( ${HELLO_INTEGRATION_TEST}
+${TEST_FOLDER_PATH}/integration/hello_integration_test.cpp
+)
+target_link_libraries( ${HELLO_INTEGRATION_TEST}
+   GTest::gmock_main
+)
+gtest_discover_tests( ${HELLO_INTEGRATION_TEST}
+)
+
+######################################################################
+# Unit tests for drivers functions
+set(DRIVERS_UNIT_TEST DriversUnitTest)
+add_executable( ${DRIVERS_UNIT_TEST}
    ${TEST_FOLDER_PATH}/unit/gpio_test.cpp
 )
 
-target_include_directories( ${UNIT_TEST} PRIVATE
-   ${TEST_FOLDER_PATH}/header-overrides
-   ${TEST_FOLDER_PATH}/mock
-)
-
-target_link_libraries( ${UNIT_TEST} PUBLIC
+target_link_libraries( ${DRIVERS_UNIT_TEST} PUBLIC
    ${LIBRARY_NAME}
    # ${ASSERT_MOCK}
    GTest::gmock_main
 )
-
-set(INTEGRATION_TEST IntegrationTest)
-add_executable( ${INTEGRATION_TEST}
-${TEST_FOLDER_PATH}/integration/integration_hello_test.cpp
-)
-target_link_libraries( ${INTEGRATION_TEST}
-   GTest::gmock_main
+gtest_discover_tests( ${DRIVERS_UNIT_TEST}
 )
 
-############################ Finish Configuration ############################ 
-
-include(GoogleTest)
-gtest_discover_tests(
-   ${UNIT_TEST}
-   ${INTEGRATION_TEST}
-)
-
-# Code coverage
+######################################################################
+# Settings for code coverage
 if (ENABLE_COVERAGE)
    set(COVERAGE_MAIN "coverage")
    set(COVERAGE_EXCLUDES
@@ -57,7 +77,7 @@ if (ENABLE_COVERAGE)
       )
    setup_target_for_coverage_lcov(
       NAME ${COVERAGE_MAIN}
-      EXECUTABLE ${UNIT_TEST}
-      DEPENDENCIES ${UNIT_TEST}
+      EXECUTABLE ${DRIVERS_UNIT_TEST} ${HELLO_UNIT_TEST} ${HELLO_INTEGRATION_TEST}
+      DEPENDENCIES ${DRIVERS_UNIT_TEST} ${HELLO_UNIT_TEST} ${HELLO_INTEGRATION_TEST}
    )
 endif()
