--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -11,13 +11,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Configure and build
-      run: |
-        make build
-
-    - name: Run Google Test
+    - name: Configure, build, and run Google Test
       run: |
         make test
+
+    - name: Run coverage
+      run: |
+        make coverage
 
     - name: Upload coverage reports to Codecov with GitHub Action
       uses: codecov/codecov-action@v3
